<resources>
    <string name="app_name">cursoAvanzado</string>

    <string name="cargando">Cargando</string>
    <string name="version">Version:</string>
    <string name="descripcionContenido">Imagen de la app curso avanzado</string>
    <string name="preparando">Preparando aplicacion</string>
    <string name="espere">Un momento por favor</string>
    <string name="accesar">Accesar</string>
    <string name="ingresepass">Ingrese contraseña:</string>
    <string name="ingreseusuario">Ingrese usuario:</string>
    <string name="faltaUsuario">Favor de ingresar un usuario para continuar</string>
    <string name="faltaPassword">Favor de ingresar su contraseña para continuar</string>
    <string name="accesoCorrecto">Acceso correcto!</string>
    <string name="accesoIncorrecto">Usuario y/o contraseña incorrecto, intente nuevamente</string>
    <string name="logout">Logout</string>
    <string name="about">Acerca de la app</string>
    <string name="llamar">Llamar al desarrollador</string>
    <string name="appName">"Curso Avanzado APP "</string>
    <string name="empresa">PID Electronics</string>
    <string name="desarrollador">By Ing. Daniel Rodriguez</string>
    <string name="sigueme">Sigueme en facebook:\nhttps://www.facebook.com/danniel.rodarvi</string>
    <string name="permisos">Conceder permisos</string>
    <string name="alertaPermisos">Esta aplicacion necesita de ciertos permisos, activelos para
    continuar!</string>
    <string name="leerQR">Leer codigo QR</string>
    <string name="codigoEscaneado">Codigo QR escaneado:</string>
    <string name="nombre">Nombre:</string>
    <string name="pass">Password:</string>
    <string name="correo">Correo:</string>
    <string name="Masculion" />
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="nodecir">Prefiero no decir</string>
    <string name="admin">Administrador</string>
    <string name="usuarionormal">Usuario Normal</string>
    <string name="agregarUsuario">Agregar usuario</string>
    <string name="usuariosAPP">Usuarios de la app:</string>
    <string name="daniel">Daniel</string>
    <string name="correoEjemplo">example@example.com</string>
    <string name="id">ID:</string>
    <string name="verUsuarios">Ver Usuarios</string>

</resources>